appends input to list

--- a/listing-app.html
+++ b/listing-app.html
@@ -11,17 +11,16 @@
       <div id="inputs">
         <h1>Input Activity and Time</h1>
         <form>
-          <label for="date">Date:</label><br />
-          <input type="date" id="date" name="date"></input><br /><br />
           <label for="activity">Activty:</label><br />
           <input type="text" id="activity" name="activity"></input><br /><br />
-          <label for="time">Time:</label><br />
-          <input type="text" id="time" name="time"></input>
+          <label for="duration">Time:</label><br />
+          <input type="text" id="duration" name="duration"></input><br />
+          <button type="button" id="addon-button">Add</button>
         </form>
       </div>
       <div id="outputs">
         <ul id="timelog">
-        </ul>
+       </ul>
       </div>
     </div>
   </body>
