adds feature that flears inputs after submitting

--- a/listing-app.html
+++ b/listing-app.html
@@ -10,7 +10,9 @@
     <div class="container">
       <div id="inputs">
         <h1>Input Activity and Time</h1>
-        <form>
+        <form id="log-form">
+          <label for="day">Date:</label><br />
+          <input type="text" id="day" name="day"></input><br /><br />
           <label for="activity">Activty:</label><br />
           <input type="text" id="activity" name="activity"></input><br /><br />
           <label for="duration">Time:</label><br />
